Fixing tests for tube and cylinder